--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "redux": "^3.7.2",
-    "redux-saga": "^0.15.4"
+    "redux-saga": "^0.15.4",
+    "patternfly-webcomponents": "0.0.9",
+    "react-patternfly-shims": "0.0.4",
+    "@webcomponents/custom-elements": "^1.0.0",
+    "@webcomponents/webcomponentsjs": "^1.0.0"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.0",
