convert to Flow types

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,14 @@
 # production
 /build
 
+# compiled patternfly assets
+src/css/*
+!src/css/.gitkeep 
+src/img
+src/fonts
+src/less/*
+!src/less/index.less
+
 # misc
 .DS_Store
 .env.local
