--- a/package.json
+++ b/package.json
@@ -3,18 +3,56 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.5",
     "flow-bin": "^0.53.1",
+    "patternfly": "^3.25.1",
+    "patternfly-react": "^0.5.0",
+    "prop-types": "^15.5.10",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-bootstrap": "^0.31.0",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.7.2",
+    "redux-saga": "^0.15.4",
+    "patternfly-webcomponents": "0.0.9",
+    "react-patternfly-shims": "0.0.4",
+    "@webcomponents/custom-elements": "^1.0.0",
+    "@webcomponents/webcomponentsjs": "^1.0.0"
   },
   "devDependencies": {
+    "babel-eslint": "^7.1.1",
+    "babel-preset-flow": "^6.23.0",
+    "eslint": "^3.19.0",
+    "eslint-config-prettier": "^2.1.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-config-standard-jsx": "^4.0.1",
+    "eslint-config-standard-react": "^5.0.0",
+    "eslint-loader": "^1.8.0",
+    "eslint-plugin-flowtype": "^2.35.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.0.1",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-prettier": "^2.0.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "node-less-chokidar": "git+https://github.com/priley86/node-less-chokidar.git",
+    "prettier": "^1.3.1",
     "react-scripts": "1.0.11"
   },
   "scripts": {
+    "copy-fonts": "cp -r node_modules/patternfly/dist/fonts src/",
+    "copy-less": "cp -r node_modules/patternfly/dist/less src/",
+    "copy-img": "cp -r node_modules/patternfly/dist/img src/",
+    "build-css": "node-less-chokidar src/App.less --output=src/css",
+    "watch-css": "npm run build-css && npm run build-css -- --watch --recursive",
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "build": "npm run copy-fonts && npm run copy-less && npm run copy-img && npm run build-css && react-scripts build",
+    "test": "npm run flow && npm run lint && react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "flow": "flow"
+    "flow": "flow",
+    "lint": "eslint --max-warnings 0 src",
+    "prettier": "prettier --write --single-quote --no-semi \"src/**/*.js\""
   }
 }
