Fix issue #8 @types/react variable a DetailedHTMLProps<AnchorHTMLAttributes, HTMLAnchorElement>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "paths": {
-      "*": ["./typings/*"]
+      "*": ["./typings/*"],
+      "react": ["node_modules/@types/react"]
     }
   },
   "exclude": [
