gitkeep css folder as we have in flowjs branch

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,9 @@
 /build
 
 # compiled patternfly assets
-src/css
+src/css/*
+!src/css/.gitkeep 
+src/img
 src/fonts
 src/less/*
 !src/less/index.less
