--- a/package.json
+++ b/package.json
@@ -1,48 +1,57 @@
 {
   "name": "patternfly-react-demo-app",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
-    "patternfly": "^3.25.1",
-    "patternfly-react": "^0.5.0",
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-bootstrap": "^0.31.0",
-    "react-dom": "^15.6.1",
-    "react-redux": "^5.0.5",
-    "react-router-dom": "^4.1.1",
+    "patternfly-react": "^0.21.3",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.17",
     "redux": "^3.7.2",
-    "redux-saga": "^0.15.4",
-    "patternfly-webcomponents": "0.0.9",
-    "react-patternfly-shims": "0.0.4",
-    "@webcomponents/custom-elements": "^1.0.0",
-    "@webcomponents/webcomponentsjs": "^1.0.0"
+    "redux-saga": "^0.16.0"
   },
   "devDependencies": {
-    "@types/classnames": "^2.2.0",
-    "@types/jest": "^20.0.2",
-    "@types/node": "^8.0.8",
-    "@types/react": "^15.0.34",
-    "@types/react-bootstrap": "0.0.52",
-    "@types/react-dom": "^15.5.1",
-    "@types/react-redux": "^4.4.45",
-    "@types/react-router-dom": "^4.0.5",
-    "@types/redux": "^3.6.0",
-    "node-less-chokidar": "git+https://github.com/priley86/node-less-chokidar.git",
-    "npm-run-all": "^4.0.2",
-    "react-scripts-ts": "2.3.2"
+    "babel-eslint": "^8.0.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-assign": "^6.8.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "eslint": "^4.12.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-config-standard-jsx": "^4.0.1",
+    "eslint-config-standard-react": "^5.0.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.0.1",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^7.5.1",
+    "eslint-plugin-standard": "^3.0.1",
+    "node-sass-chokidar": "0.0.3",
+    "prettier": "^1.8.2"
+  },
+  "sassIncludes": {
+    "src": "--include-path src",
+    "patternfly": "--include-path node_modules/patternfly/dist/sass",
+    "patternflyReact": "--include-path node_modules/patternfly-react/dist/sass",
+    "bootstrap": "--include-path node_modules/patternfly/node_modules/bootstrap-sass/assets/stylesheets",
+    "fontAwesome": "--include-path node_modules/patternfly/node_modules/font-awesome-sass/assets/stylesheets"
   },
   "scripts": {
     "copy-fonts": "cp -r node_modules/patternfly/dist/fonts src/",
-    "copy-less": "cp -r node_modules/patternfly/dist/less src/",
     "copy-img": "cp -r node_modules/patternfly/dist/img src/",
-    "build-css": "node-less-chokidar src/App.less --output=src/css",
+    "build-css": "node-sass-chokidar src/App.scss --output-style compressed $npm_package_sassIncludes_src $npm_package_sassIncludes_patternfly $npm_package_sassIncludes_patternflyReact $npm_package_sassIncludes_bootstrap $npm_package_sassIncludes_fontAwesome -o src/css",
     "watch-css": "npm run build-css && npm run build-css -- --watch --recursive",
-    "start-js": "react-scripts-ts start",
-    "start": "npm-run-all -p watch-css start-js",
-    "build": "npm run copy-fonts && npm run copy-less && npm run copy-img && npm run build-css && react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "start": "react-scripts start",
+    "build": "npm run copy-fonts && npm run copy-img && npm run build-css && react-scripts build",
+    "test": "npm run lint && react-scripts test --env=jsdom --watch",
+    "eject": "react-scripts eject",
+    "lint": "eslint --max-warnings 0 src",
+    "prettier": "prettier --write --single-quote --trailing-comma=none \"src/**/*.js\""
   }
 }
