--- a/package.json
+++ b/package.json
@@ -4,36 +4,19 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
-    "patternfly-react": "^1.6.2",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "patternfly-react": "^2.7.0",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
     "react-redux": "^5.0.6",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
+    "react-scripts": "1.1.4",
     "redux": "^3.7.2",
-    "redux-saga": "^0.16.0"
+    "source-map-explorer": "^1.5.0"
   },
   "devDependencies": {
-    "babel-eslint": "^8.0.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-assign": "^6.8.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "eslint": "^4.12.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-config-standard-jsx": "^4.0.1",
-    "eslint-config-standard-react": "^5.0.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^5.0.1",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-prettier": "^2.3.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^7.5.1",
-    "eslint-plugin-standard": "^3.0.1",
-    "node-sass-chokidar": "0.0.3",
-    "prettier": "^1.8.2"
+    "node-sass-chokidar": "^1.3.0",
+    "prettier": "^1.12.1"
   },
   "sassIncludes": {
     "src": "--include-path src",
@@ -49,9 +32,21 @@
     "watch-css": "npm run build-css && npm run build-css -- --watch --recursive",
     "start": "react-scripts start",
     "build": "npm run copy-fonts && npm run copy-img && npm run build-css && react-scripts build",
-    "test": "npm run lint && react-scripts test --env=jsdom --watch",
+    "test": "react-scripts test --env=jsdom --watch",
     "eject": "react-scripts eject",
-    "lint": "eslint --max-warnings 0 src",
-    "prettier": "prettier --write --single-quote --trailing-comma=none \"src/**/*.js\""
+    "prettier": "prettier --write --single-quote --trailing-comma=none \"src/**/*.js\"",
+    "analyze": "source-map-explorer build/static/js/vendors.*"
+  },
+  "browserslist": {
+    "development": [
+      "last 2 chrome versions",
+      "last 2 firefox versions",
+      "last 2 edge versions"
+    ],
+    "production": [
+      ">0.25%",
+      "not op_mini all",
+      "ie 11"
+    ]
   }
 }
