--- a/package.json
+++ b/package.json
@@ -1,22 +1,34 @@
 {
   "name": "patternfly-react-demo-app",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
-    "patternfly-react": "^2.7.0",
+    "lodash.orderby": "^4.6.0",
+    "numeral": "^2.0.6",
+    "patternfly-react": "^2.10.1",
+    "prop-types": "^15.6.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4",
+    "recompose": "^0.26.0",
     "redux": "^3.7.2",
-    "source-map-explorer": "^1.5.0"
+    "sortabular": "^1.5.1",
+    "table-resolver": "^3.2.0"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.2",
+    "cross-var": "^1.1.0",
+    "eslint": "^4.19.1",
+    "eslint-plugin-patternfly-react": "^0.1.1",
+    "ncp": "^2.0.0",
     "node-sass-chokidar": "^1.3.0",
-    "prettier": "^1.12.1"
+    "npm-run-all": "^4.1.3",
+    "prettier": "^1.12.1",
+    "react-scripts": "2.0.0-next.3e165448",
+    "source-map-explorer": "^1.5.0"
   },
   "sassIncludes": {
     "src": "--include-path src",
@@ -26,16 +38,20 @@
     "fontAwesome": "--include-path node_modules/font-awesome-sass/assets/stylesheets"
   },
   "scripts": {
-    "copy-fonts": "cp -r node_modules/patternfly/dist/fonts src/",
-    "copy-img": "cp -r node_modules/patternfly/dist/img src/",
-    "build-css": "node-sass-chokidar src/App.scss --output-style compressed $npm_package_sassIncludes_src $npm_package_sassIncludes_patternfly $npm_package_sassIncludes_patternflyReact $npm_package_sassIncludes_bootstrap $npm_package_sassIncludes_fontAwesome -o src/css",
-    "watch-css": "npm run build-css && npm run build-css -- --watch --recursive",
-    "start": "react-scripts start",
-    "build": "npm run copy-fonts && npm run copy-img && npm run build-css && react-scripts build",
-    "test": "react-scripts test --env=jsdom --watch",
+    "copy-fonts": "ncp node_modules/patternfly/dist/fonts src/fonts",
+    "copy-img": "ncp node_modules/patternfly/dist/img src/img",
+    "build-css": "cross-var \"node-sass-chokidar src/ --output-style compressed $npm_package_sassIncludes_src $npm_package_sassIncludes_patternfly $npm_package_sassIncludes_patternflyReact $npm_package_sassIncludes_bootstrap $npm_package_sassIncludes_fontAwesome -o src/\"",
+    "watch-css": "yarn build-css && cross-var \"node-sass-chokidar src/ --output-style compressed $npm_package_sassIncludes_src $npm_package_sassIncludes_patternfly $npm_package_sassIncludes_patternflyReact $npm_package_sassIncludes_bootstrap $npm_package_sassIncludes_fontAwesome -o src/ --watch --recursive\"",
+    "start-js": "react-scripts start",
+    "build-js": "react-scripts build",
+    "start": "npm-run-all -p watch-css start-js",
+    "build": "yarn copy-fonts && yarn copy-img && yarn build-css && yarn build-js",
+    "test": "yarn lint && react-scripts test --env=jsdom --watch",
     "eject": "react-scripts eject",
     "prettier": "prettier --write --single-quote --trailing-comma=none \"src/**/*.js\"",
-    "analyze": "source-map-explorer build/static/js/vendors.*"
+    "analyze": "source-map-explorer build/static/js/vendors.*",
+    "lint": "yarn lint:js",
+    "lint:js": "eslint --max-warnings 0 src"
   },
   "browserslist": {
     "development": [
