--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.12.1",
-    "react-scripts": "2.0.0-next.3e165448",
+    "react-scripts": "1.1.4",
     "source-map-explorer": "^1.5.0"
   },
   "sassIncludes": {
@@ -49,7 +49,7 @@
     "test": "yarn lint && react-scripts test --env=jsdom --watch",
     "eject": "react-scripts eject",
     "prettier": "prettier --write --single-quote --trailing-comma=none \"src/**/*.js\"",
-    "analyze": "source-map-explorer build/static/js/vendors.*",
+    "analyze": "source-map-explorer build/static/js/main.*",
     "lint": "yarn lint:js",
     "lint:js": "eslint --max-warnings 0 src"
   },
