--- a/package.json
+++ b/package.json
@@ -19,14 +19,13 @@
     "table-resolver": "^3.2.0"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.2",
-    "cross-var": "^1.1.0",
+    "babel-eslint": "^8.2.6",
     "eslint": "^4.19.1",
     "eslint-plugin-patternfly-react": "^0.1.1",
     "ncp": "^2.0.0",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
-    "prettier": "^1.12.1",
+    "prettier": "^1.14.2",
     "react-scripts": "1.1.4",
     "source-map-explorer": "^1.5.0"
   },
@@ -40,29 +39,20 @@
   "scripts": {
     "copy-fonts": "ncp node_modules/patternfly/dist/fonts src/fonts",
     "copy-img": "ncp node_modules/patternfly/dist/img src/img",
-    "build-css": "cross-var \"node-sass-chokidar src/ --output-style compressed $npm_package_sassIncludes_src $npm_package_sassIncludes_patternfly $npm_package_sassIncludes_patternflyReact $npm_package_sassIncludes_bootstrap $npm_package_sassIncludes_fontAwesome -o src/\"",
-    "watch-css": "yarn build-css && cross-var \"node-sass-chokidar src/ --output-style compressed $npm_package_sassIncludes_src $npm_package_sassIncludes_patternfly $npm_package_sassIncludes_patternflyReact $npm_package_sassIncludes_bootstrap $npm_package_sassIncludes_fontAwesome -o src/ --watch --recursive\"",
-    "start-js": "react-scripts start",
+    "build-css": "node-sass-chokidar src/ --output-style compressed $npm_package_sassIncludes_src $npm_package_sassIncludes_patternfly $npm_package_sassIncludes_patternflyReact $npm_package_sassIncludes_bootstrap $npm_package_sassIncludes_fontAwesome -o src/",
+    "watch-css": "yarn build-css && node-sass-chokidar src/ --output-style compressed $npm_package_sassIncludes_src $npm_package_sassIncludes_patternfly $npm_package_sassIncludes_patternflyReact $npm_package_sassIncludes_bootstrap $npm_package_sassIncludes_fontAwesome -o src/ --watch --recursive",
     "build-js": "react-scripts build",
-    "start": "npm-run-all -p watch-css start-js",
-    "build": "yarn copy-fonts && yarn copy-img && yarn build-css && yarn build-js",
+    "start": "react-scripts start",
+    "start:dev": "npm-run-all -p watch-css start-js",
+    "build": "yarn copy-fonts && yarn copy-img && yarn build-css && yarn build-js; yarn postbuild;",
     "test": "yarn lint && react-scripts test --env=jsdom --watch",
     "eject": "react-scripts eject",
     "prettier": "prettier --write --single-quote --trailing-comma=none \"src/**/*.js\"",
     "analyze": "source-map-explorer build/static/js/main.*",
     "lint": "yarn lint:js",
-    "lint:js": "eslint --max-warnings 0 src"
-  },
-  "browserslist": {
-    "development": [
-      "last 2 chrome versions",
-      "last 2 firefox versions",
-      "last 2 edge versions"
-    ],
-    "production": [
-      ">0.25%",
-      "not op_mini all",
-      "ie 11"
-    ]
+    "lint:js": "eslint --max-warnings 0 src",
+    "docker:build": "docker build -t patternfly-react-demo-app .",
+    "preinstall": "node -v; npm -v;",
+    "postbuild": "[ \"$BUILD_ENV\" != OCP ] && exit 0; yarn install --production --ignore-scripts --prefer-offline;"
   }
 }
