--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "build-css": "node-sass-chokidar src/ --output-style compressed $npm_package_sassIncludes_src $npm_package_sassIncludes_patternfly $npm_package_sassIncludes_patternflyReact $npm_package_sassIncludes_bootstrap $npm_package_sassIncludes_fontAwesome -o src/",
     "watch-css": "yarn build-css && node-sass-chokidar src/ --output-style compressed $npm_package_sassIncludes_src $npm_package_sassIncludes_patternfly $npm_package_sassIncludes_patternflyReact $npm_package_sassIncludes_bootstrap $npm_package_sassIncludes_fontAwesome -o src/ --watch --recursive",
     "build-js": "react-scripts build",
-    "start:dev": "npm-run-all -p watch-css start-js",
+    "start:dev": "npm-run-all -p watch-css start:local",
+    "start:local": "react-scripts start",
     "build": "yarn copy-fonts && yarn copy-img && yarn build-css && yarn build-js; yarn postbuild;",
     "test": "yarn lint && react-scripts test --env=jsdom --watch",
     "eject": "react-scripts eject",
